    text listing of relevant package versions and use it in attach_printing()
  * apport/hookutils.py: Add new function attach_relevant_packages() to attach
    version information (and perhaps eventually run hooks?) for related
    packages
  * apport/hookutils.py: Add glob matching to package_versions()
  * apport/hookutils.py: Add fuser info and dmesg to attach_alsa

 -- Matt Zimmerman <mdz@ubuntu.com>  Wed, 08 Apr 2009 18:49:27 +0100

apport (1.0-0ubuntu2) jaunty; urgency=low

  * backends/packaging-apt-dpkg.py: Add missing shutil import.
  * debian/local/ubuntu-bug: Filter out -p and -P, for backwards calling
    compatibility. (LP: #356755)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 06 Apr 2009 23:04:39 -0700

apport (1.0-0ubuntu1) jaunty; urgency=low

  * Apport has a proper upstream trunk now (lp:apport) and made an 1.0
    upstream release. Use this as an orig.tar.gz. This does not change any
    code for Jaunty, just removes the Fedora/OpenSUSE specific .spec and init
    scripts.
  * Add bzr-builddeb configuration (merge mode).
  * Add debian/watch for upstream releases on Launchpad.
  * Drop debian/python-apport.postinst, obsolete for a long time.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 06 Apr 2009 17:37:48 -0700

apport (0.149) jaunty; urgency=low

  Do some internal cleanup of distribution specific stuff:

  * problem_report.py, man/apport-unpack.1: Fix description of .crash file
    syntax (RFC822, not "Debian control").
  * Move cron.daily, init script, and default file from debian/ to etc/, and
    install them in setup.py. These files are appropriate for upstream
    installation.
  * Move crashdb.conf and doc/README.blacklist to etc/, to simplify setup.py.
  * setup.py: Move *.mo generation/installation into my_install_data class,
    for cleanliness.
  * Move installation of missing packages for retracing from
    bin/apport-retrace to new abstract interface apport/packaging.py,