@@ -17,17 +17,19 @@ import os
 import datetime
 import glob
 import re
+import string
 
 import xml.dom, xml.dom.minidom
 
 from packaging_impl import impl as packaging
 
+_path_key_trans = string.maketrans('#/-_+','.....')
 def path_to_key(path):
     '''Generate a valid report key name from a file path.
         
     This will meet apport's restrictions on the characters used in keys.
     '''
-    return path.replace('/', '.')
+    return path.translate(_path_key_trans)
 
 def attach_file_if_exists(report, path, key=None):
     '''Attach file contents if file exists.'''
@@ -151,13 +153,25 @@ def attach_alsa(report):
     for line in open('/proc/asound/cards'):
         if ']:' in line:
             fields = line.lstrip().split()
-            cards.append(fields[0])
+            cards.append(int(fields[0]))
 
     for card in cards:
-        key = 'Amixer.%s.info' % card
-        report[key] = command_output(['amixer', '-c', card, 'info'])
-        key = 'Amixer.%s.values' % card
-        report[key] = command_output(['amixer', '-c', card])
+        key = 'Card%d.Amixer.info' % card
+        report[key] = command_output(['amixer', '-c', str(card), 'info'])
+        key = 'Card%d.Amixer.values' % card
+        report[key] = command_output(['amixer', '-c', str(card)])
+
+        for codecpath in glob.glob('/proc/asound/card%d/codec*' % card):
+            if os.path.isfile(codecpath):
+                codec = os.path.basename(codecpath)
+                key = 'Card%d.Codecs.%s' % (card, path_to_key(codec))
+                attach_file(report, codecpath, key=key)
+            elif os.path.isdir(codecpath):
+                codec = os.path.basename(codecpath)
+                for name in os.listdir(codecpath):
+                    path = os.path.join(codecpath, name)
+                    key = 'Card%d.Codecs.%s.%s' % (card, path_to_key(codec), path_to_key(name))
+                    attach_file(report, path, key)
 
     report['AudioDevicesInUse'] = command_output(
         ['fuser','-v'] + glob.glob('/dev/dsp*') 
